# verba-cratis

./: .gitignore  .gitpod.yml  CONTRIBUTING.md  Dockerfile  EXAMPLE.md  NOTES.md  README.md  TODO.md  clean_tmp.sh  requirements.txt  run_tests.sh  setup.cfg
doc/: .$design Diagram.bkp  .$design Diagram.dtmp  README.md  concepts.md  design Diagram
doc/coverage/: README.md
doc/help/: README.md  cli_arguments.md
doc/manifests/: README.md  infrastructure_accounts.md
examples/example_01/: example_01.yaml  example_02.yaml
examples/example_01/lambda_function_src/: dynamodb_update_example.py
scratch/: docker_notes.md  git_experiments_https.py  git_experiments_ssh.py  plugins_concept.md  processing_snippets_to_get_final_value.py  processing_variables_in_strings.py  template_line.txt
src/acfop/: __init__.py  acfop.py
src/acfop/aws/: __init__.py
src/acfop/functions/: __init__.py  aws_helpers.py
src/acfop/models/: __init__.py  configuration_models.py  runtime.py
src/acfop/utils/: __init__.py  cli_arguments.py  file_io.py  function_runner.py  os_integration.py  parse_config_file.py  parser.py  parser2.py
src/verbacratis/: __init__.py  verbacratis.py
src/verbacratis/functions/: __init__.py
src/verbacratis/infrastructure_providers/: __init__.py
src/verbacratis/infrastructure_providers/aws/: __init__.py  aws_helpers.py
src/verbacratis/models/: __init__.py  configuration_models.py  deployment_manifest_models.py  deployments_configuration.py  ordering.py  runtime.py  runtime_configuration.py  systems_configuration.py
src/verbacratis/notification_providers/: __init__.py  registered_providers.py
src/verbacratis/notification_providers/rest/: __init__.py
src/verbacratis/utils/: __init__.py  cli_arguments.py  file_io.py  function_runner.py  git_integration.py  http_requests_io.py  ordering.py  os_integration.py  parse_config_file.py  parser.py  parser2.py
tests/: __init__.py  mocks.py  notification_providers_init.py  test_acfop.py  test_aws.py  test_functions.py  test_functions_aws_helpers.py  test_models_deployments_configuration.py  test_models_ordering.py  test_models_runtime.py  test_models_runtime_configuration.py  test_models_systems_configuration.py  test_notification_providers_init.py  test_notification_providers_rest_init.py  test_utile_parser.py  test_utils.py  test_utils_cli_arguments.py  test_utils_file_io.py  test_utils_git_integration.py  test_utils_http_requests_io.py  test_utils_parse_config_file.py  test_utils_parser.py  test_utils_parser2.py  test_verbacratis.py  test_verbacratis_init.py
