[metadata]
name = acfop
version = 0.0.1
author = Nico Coetzee
author_email = nicc777@gmail.com
description = This project aims to create a command line utility that can be run against a YAML configuration file that defines deployments that can handle multiple tasks, where each task links to an AWS CloudFOrmation Template
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nicc777/acfop
project_urls =
    Bug Tracker = https://github.com/nicc777/acfop/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Topic :: System :: Distributed Computing
    Topic :: System :: Installation/Setup
    Topic :: System :: Software Distribution
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pyyaml
    cerberus
    boto3

[options.entry_points]
console_scripts =
    acfop = acfop.acfop:main

[options.packages.find]
where = src